--- a/app/src/main/res/layout/fragment_dashboard_ngo.xml
+++ b/app/src/main/res/layout/fragment_dashboard_ngo.xml
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="200dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
             tools:ignore="MissingConstraints">
