--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Dashboard"
-    android:background="@drawable/bg_dashboard">
+    android:background="@drawable/bg_dashboard"
+    tools:context=".Dashboard">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
@@ -82,7 +83,6 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout13"
             tools:ignore="MissingConstraints">
 
-
             <EditText
                 android:id="@+id/name"
                 android:layout_width="340dp"
@@ -124,16 +124,17 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/rounded_edittext_background"
+                android:backgroundTint="@color/readonly_background"
                 android:drawableStart="@drawable/ic_email"
                 android:drawableEnd="@drawable/ic_edit"
                 android:fontFamily="@font/dmsans_reg"
                 android:gravity="center"
                 android:hint="Email Address"
-                android:inputType="textEmailAddress"
+                android:inputType="none"
+                android:focusable="false"
                 android:paddingHorizontal="20dp"
                 android:textColorHint="#2F2F2F"
                 android:textSize="15sp" />
-
 
 
         </LinearLayout>
@@ -160,9 +161,6 @@
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textSize="18dp" />
-
         </LinearLayout>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
