--- a/app/src/main/res/layout/activity_confirm_requests.xml
+++ b/app/src/main/res/layout/activity_confirm_requests.xml
@@ -61,6 +61,7 @@
                     android:layout_height="80dp"
                     android:src="@drawable/redcrosspfp"
                     android:layout_gravity="center_vertical"
+                    android:id="@+id/placeholder_image"
                     />
             </androidx.cardview.widget.CardView>
 
@@ -77,7 +78,9 @@
                     android:fontFamily="@font/fonttop"
                     android:text="Youth red Cross VEC"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:id="@+id/confirm_title"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -87,7 +90,9 @@
                     android:fontFamily="@font/fonttop"
                     android:text="Quantity: 15"
                     android:textColor="@color/black"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:id="@+id/confirm_quantity"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,7 +102,9 @@
                     android:fontFamily="@font/fonttop"
                     android:text="Location: Banilad"
                     android:textColor="@color/black"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:id="@+id/confirm_location"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -107,17 +114,10 @@
                     android:fontFamily="@font/fonttop"
                     android:text="Pickup before: 2:30pm"
                     android:textColor="@color/black"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:id="@+id/confirm_time"
+                    />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/fonttop"
-                    android:text="Description: Description of the package"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
 
 
             </LinearLayout>
