--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -159,14 +159,15 @@
                 android:src="@drawable/ic_lock" />
 
             <ImageButton
-                android:background="@android:color/transparent"
                 android:id="@+id/togglePasswordVisibility"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="15dp"
-                android:src="@drawable/ic_hide" />
+                android:src="@drawable/ic_hide"
+                android:background="@android:color/transparent"/>
+
         </RelativeLayout>
     </LinearLayout>
 
