partial commit for delete button

--- a/app/src/main/res/layout/yd_custom_dialogbox.xml
+++ b/app/src/main/res/layout/yd_custom_dialogbox.xml
@@ -214,4 +214,9 @@
         </LinearLayout>
 
     </RelativeLayout>
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete Donation" />
 </RelativeLayout>
