--- a/app/src/main/res/layout/activity_ngo_requests.xml
+++ b/app/src/main/res/layout/activity_ngo_requests.xml
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout15"
         tools:ignore="MissingConstraints">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/yourdonationsRecycler"
+            android:id="@+id/ngoRequestRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/DonationList"
