--- a/app/src/main/res/layout/fragment_dashboard_ngo.xml
+++ b/app/src/main/res/layout/fragment_dashboard_ngo.xml
@@ -12,98 +12,119 @@
         >
 
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="-2dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/poppins_reg"
-                    android:text="@string/dashboard"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
         <LinearLayout
-            android:id="@+id/linearLayout2"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="50dp"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            tools:ignore="MissingConstraints">
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="-2dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/dashboard_image" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/poppins_reg"
+                android:text="@string/dashboard"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:layout_marginBottom="200dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-            tools:ignore="MissingConstraints">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_reg"
-                android:text="Hi, Thagam Foundation"
-                android:textColor="@color/darkgrey"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_reg"
-                android:text="Need food?"
-                android:textColor="@color/darkgrey"
-                android:textSize="20sp"
-                android:textStyle="normal" />
-            <!--            <Button-->
-            <!--                android:id="@+id/make_a_donation_button"-->
-            <!--                android:layout_width="250dp"-->
-            <!--                android:layout_height="50dp"-->
-            <!--                android:text="Donate"-->
-            <!--                android:layout_gravity="center_horizontal"-->
-            <!--                android:fontFamily="@font/poppins_reg"-->
-            <!--                android:textSize="20sp"-->
-            <!--                android:layout_marginTop="20dp"-->
-            <!--                android:textAllCaps="false"-->
-            <!--                android:textColor="#FFFFFF"-->
-            <!--                android:background="@drawable/roundstyle"/>-->
-            <!--            <Button-->
-            <!--                android:id="@+id/your_donations_button"-->
-            <!--                android:layout_width="250dp"-->
-            <!--                android:layout_height="50dp"-->
-            <!--                android:text="Your Donations"-->
-            <!--                android:layout_gravity="center_horizontal"-->
-            <!--                android:fontFamily="@font/poppins_reg"-->
-            <!--                android:textSize="20sp"-->
-            <!--                android:layout_marginTop="10dp"-->
-            <!--                android:textAllCaps="false"-->
-            <!--                android:textColor="#FFFFFF"-->
-            <!--                android:background="@drawable/roundstyle"/>-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout2"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:layout_marginTop="20dp"
+                        android:orientation="horizontal"
+                        tools:ignore="MissingConstraints">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/dashboard_image" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="40dp"
+                        android:layout_marginBottom="200dp"
+                        android:orientation="vertical"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+                        tools:ignore="MissingConstraints">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/poppins_reg"
+                            android:text="Hi, Thagam Foundation"
+                            android:textColor="@color/darkgrey"
+                            android:textSize="30sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/poppins_reg"
+                            android:text="Need food?"
+                            android:textColor="@color/darkgrey"
+                            android:textSize="20sp"
+                            android:textStyle="normal" />
+
+                        <Button
+                            android:id="@+id/your_requests"
+                            android:layout_width="250dp"
+                            android:layout_height="50dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="20dp"
+                            android:background="@drawable/roundstyle"
+                            android:fontFamily="@font/poppins_reg"
+                            android:text="Your Requests"
+                            android:textAllCaps="false"
+                            android:textColor="#FFFFFF"
+                            android:textSize="20sp" />
+                        <!--            <Button-->
+                        <!--                android:id="@+id/your_donations_button"-->
+                        <!--                android:layout_width="250dp"-->
+                        <!--                android:layout_height="50dp"-->
+                        <!--                android:text="Your Donations"-->
+                        <!--                android:layout_gravity="center_horizontal"-->
+                        <!--                android:fontFamily="@font/poppins_reg"-->
+                        <!--                android:textSize="20sp"-->
+                        <!--                android:layout_marginTop="10dp"-->
+                        <!--                android:textAllCaps="false"-->
+                        <!--                android:textColor="#FFFFFF"-->
+                        <!--                android:background="@drawable/roundstyle"/>-->
 
 
+                    </LinearLayout>
+                </LinearLayout>
+            </ScrollView>
         </LinearLayout>
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
