--- a/app/src/main/res/layout/yd_custom_dialogbox.xml
+++ b/app/src/main/res/layout/yd_custom_dialogbox.xml
@@ -23,7 +23,7 @@
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/redcrosspfp"
+                android:src="@drawable/pizza"
                 android:id="@+id/imahe"
                 android:scaleType="centerCrop"
                 />
