--- a/app/src/main/res/layout/activity_confirm_requests.xml
+++ b/app/src/main/res/layout/activity_confirm_requests.xml
@@ -61,6 +61,7 @@
                     android:layout_height="80dp"
                     android:src="@drawable/redcrosspfp"
                     android:layout_gravity="center_vertical"
+                    android:scaleType="centerCrop"
                     android:id="@+id/placeholder_image"
                     />
             </androidx.cardview.widget.CardView>
