--- a/app/src/main/res/layout/activity_new_donation.xml
+++ b/app/src/main/res/layout/activity_new_donation.xml
@@ -138,8 +138,8 @@
             android:textSize="15sp" />
         <Spinner
             android:id="@+id/charitySpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="340dp"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/rounded_edittext_background"
             android:fontFamily="@font/dmsans_reg"
