di ko kamao mu backend

--- a/app/src/main/res/layout/activity_confirm_requests.xml
+++ b/app/src/main/res/layout/activity_confirm_requests.xml
@@ -118,6 +118,17 @@
                     android:textSize="15sp"
                     android:id="@+id/confirm_time"
                     />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/fonttop"
+                    android:text="Charity: "
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:id="@+id/charity"
+                    />
 
 
 
