--- a/app/src/main/res/layout/activity_accepted_requests.xml
+++ b/app/src/main/res/layout/activity_accepted_requests.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:fontFamily="@font/poppins_reg"
-            android:text="Requests"
+            android:text="Confirmed Requests"
             android:textColor="#FF9843"
             android:textSize="23dp"
             android:textStyle="bold" />
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
         tools:ignore="MissingConstraints">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/ngoRequestRecycler"
+            android:id="@+id/yourdonationsRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/DonationList"
