--- a/app/src/main/res/layout/activity_your_donations.xml
+++ b/app/src/main/res/layout/activity_your_donations.xml
@@ -9,7 +9,7 @@
 
 
     <LinearLayout
-        android:id="@+id/linearLayout15"
+        android:id="@+id/relativeLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -18,26 +18,33 @@
         tools:ignore="MissingConstraints">
 
         <ImageButton
-            android:id="@+id/front_page_back_button"
+            android:id="@+id/new_donations_back_button"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
+            android:layout_height="38dp"
             android:layout_marginLeft="15dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_circle" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
+
         <TextView
-            android:id="@+id/DonationList"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="50dp"
             android:fontFamily="@font/poppins_reg"
             android:text="Your Donations"
             android:textColor="#FF9843"
             android:textSize="23dp"
             android:textStyle="bold" />
-
-
     </LinearLayout>
 
 
@@ -47,7 +54,7 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout15"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
         tools:ignore="MissingConstraints">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/yourdonationsRecycler"
