--- a/app/src/main/res/layout/fragment_dashboard_ngo.xml
+++ b/app/src/main/res/layout/fragment_dashboard_ngo.xml
@@ -105,18 +105,18 @@
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="20sp" />
-                        <!--            <Button-->
-                        <!--                android:id="@+id/your_donations_button"-->
-                        <!--                android:layout_width="250dp"-->
-                        <!--                android:layout_height="50dp"-->
-                        <!--                android:text="Your Donations"-->
-                        <!--                android:layout_gravity="center_horizontal"-->
-                        <!--                android:fontFamily="@font/poppins_reg"-->
-                        <!--                android:textSize="20sp"-->
-                        <!--                android:layout_marginTop="10dp"-->
-                        <!--                android:textAllCaps="false"-->
-                        <!--                android:textColor="#FFFFFF"-->
-                        <!--                android:background="@drawable/roundstyle"/>-->
+                                    <Button
+                                        android:id="@+id/confirmed_requests_button"
+                                        android:layout_width="250dp"
+                                        android:layout_height="50dp"
+                                        android:text="Confirmed"
+                                        android:layout_gravity="center_horizontal"
+                                        android:fontFamily="@font/poppins_reg"
+                                        android:textSize="20sp"
+                                        android:layout_marginTop="10dp"
+                                        android:textAllCaps="false"
+                                        android:textColor="#FFFFFF"
+                                        android:background="@drawable/roundstyle"/>
 
 
                     </LinearLayout>
