--- a/app/src/main/res/layout/request_layout.xml
+++ b/app/src/main/res/layout/request_layout.xml
@@ -33,7 +33,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:id="@+id/ADimage"
-                    android:src="@drawable/pizza"
+                    android:src="@drawable/pfp"
                     android:layout_gravity="center_vertical"
                     android:scaleType="centerCrop" />
             </androidx.cardview.widget.CardView>
@@ -53,7 +53,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:text="Pan de Coco"
+                            android:text="UserName"
                             android:textStyle="bold"
                             android:textColor="@color/black"
                             android:textSize="12sp"
@@ -66,7 +66,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:text="2:30pm"
+                            android:text="User Type"
                             android:textColor="@color/black"
                             android:textSize="10sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -77,7 +77,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:text="5000"
+                            android:text="Phone Number"
                             android:textStyle="bold"
                             android:textColor="@color/black"
                             android:textSize="10sp"
