--- a/app/src/main/res/layout/activity_ngo_requests.xml
+++ b/app/src/main/res/layout/activity_ngo_requests.xml
@@ -56,14 +56,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
         tools:ignore="MissingConstraints">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/ngoRequestRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/DonationList"
-            tools:listitem="@layout/your_donation_item_layout"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            tools:listitem="@layout/your_donation_item_layout" />
 
     </LinearLayout>
 
