--- a/app/src/main/res/layout/request_layout.xml
+++ b/app/src/main/res/layout/request_layout.xml
@@ -84,6 +84,18 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@id/image"
                             app:layout_constraintTop_toTopOf="parent" />
+                            <TextView
+                                android:id="@+id/ADstatus"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="20dp"
+                                android:text="Pending"
+                                android:textStyle="bold"
+                                android:textColor="@color/black"
+                                android:textSize="10sp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toEndOf="@id/image"
+                                app:layout_constraintTop_toTopOf="parent" />
 s
 
                 </LinearLayout>
