--- a/app/src/main/res/layout/your_donation_item_layout.xml
+++ b/app/src/main/res/layout/your_donation_item_layout.xml
@@ -83,6 +83,14 @@
                     android:textColor="@color/black"
                     android:text="Yes"
                     android:textSize="10sp" />
+                <TextView
+                    android:id="@+id/tvStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_reg"
+                    android:textColor="@color/black"
+                    android:text="Pending"
+                    android:textSize="10sp" />
             </LinearLayout>
             
         </LinearLayout>
